@@ -1,3 +1,8 @@
+2006-04-07  Thorsten Kukuk  <kukuk@suse.de>
+
+	* etc/ypserv.conf.5.xml: New file.
+	* etc/ypserv.conf.5: Regenerated from xml source.
+
 2006-04-06  Thorsten Kukuk  <kukuk@suse.de>
 
 	* etc/netgroup.5.xml: New file.
